--- a/2021/node-game/package.json
+++ b/2021/node-game/package.json
@@ -24,6 +24,7 @@
     "css-loader": "^5.2.6",
     "html-webpack-plugin": "^5.3.1",
     "mini-css-extract-plugin": "^1.6.0",
+    "nanoid": "^3.1.23",
     "nodemon": "^2.0.7",
     "optimize-css-assets-webpack-plugin": "^6.0.0",
     "terser-webpack-plugin": "^5.1.2",
